InterfaceWrapper/Messages/WrapperFromCToSharp/WrapperFromCToSharp.h

/* Auto-generated by InterfaceWrapper. Do not edit by hand. */
#ifndef WRAPPER_FROM_C_TO_SHARP_H
#define WRAPPER_FROM_C_TO_SHARP_H

/* Keep the original C types (AdiInt, AdiUInt8, PHS_*) as declared in
   typelib.h, convlib.h and the generated type/prototype headers. */
#include "Messages/IOCARDprc.h"

#ifdef WRAPPERFROMCTOSHARP_EXPORTS
#define WRAPPER_API __declspec(dllexport)
#else
#define WRAPPER_API __declspec(dllimport)
#endif

#ifdef __cplusplus
extern "C" {
#endif

/* Generic dispatchers operating on the static physical structures. */
WRAPPER_API AdiInt Wrapper_ConvertToPhysical(AdiInt msgId, AdiUInt8* intfPtr);
WRAPPER_API void   Wrapper_ConvertToInterface(AdiInt msgId, AdiUInt8* intfPtr);

/* HDR_ONLY_MESSAGE_IO2LCU (PHS_HDRONLYMESSAGEIO2LCU) */
WRAPPER_API PHS_HDRONLYMESSAGEIO2LCU* Wrapper_Get_HDR_ONLY_MESSAGE_IO2LCU(void);
WRAPPER_API AdiInt HDR_ONLY_MESSAGE_IO2LCU_ConvertToPhysical(PHS_HDRONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void HDR_ONLY_MESSAGE_IO2LCU_ConvertToInterface(PHS_HDRONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr);

/* HDR_ONLY_MESSAGE_LCU2IO (PHS_HDRONLYMESSAGELCU2IO) */
WRAPPER_API PHS_HDRONLYMESSAGELCU2IO* Wrapper_Get_HDR_ONLY_MESSAGE_LCU2IO(void);
WRAPPER_API AdiInt HDR_ONLY_MESSAGE_LCU2IO_ConvertToPhysical(PHS_HDRONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void HDR_ONLY_MESSAGE_LCU2IO_ConvertToInterface(PHS_HDRONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr);

/* KEEP_ALIVE_MESSAGE (PHS_KEEPALIVEMESSAGE) */
WRAPPER_API PHS_KEEPALIVEMESSAGE* Wrapper_Get_KEEP_ALIVE_MESSAGE(void);
WRAPPER_API AdiInt KEEP_ALIVE_MESSAGE_ConvertToPhysical(PHS_KEEPALIVEMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void KEEP_ALIVE_MESSAGE_ConvertToInterface(PHS_KEEPALIVEMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* LOG_DATA_MESSAGE (PHS_LOGDATAMESSAGE) */
WRAPPER_API PHS_LOGDATAMESSAGE* Wrapper_Get_LOG_DATA_MESSAGE(void);
WRAPPER_API AdiInt LOG_DATA_MESSAGE_ConvertToPhysical(PHS_LOGDATAMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void LOG_DATA_MESSAGE_ConvertToInterface(PHS_LOGDATAMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* NONCE_MESSAGE (PHS_NONCEMESSAGE) */
WRAPPER_API PHS_NONCEMESSAGE* Wrapper_Get_NONCE_MESSAGE(void);
WRAPPER_API AdiInt NONCE_MESSAGE_ConvertToPhysical(PHS_NONCEMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void NONCE_MESSAGE_ConvertToInterface(PHS_NONCEMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* REQUEST_STATUS_MESSAGE (PHS_REQUESTSTATUSMESSAGE) */
WRAPPER_API PHS_REQUESTSTATUSMESSAGE* Wrapper_Get_REQUEST_STATUS_MESSAGE(void);
WRAPPER_API AdiInt REQUEST_STATUS_MESSAGE_ConvertToPhysical(PHS_REQUESTSTATUSMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void REQUEST_STATUS_MESSAGE_ConvertToInterface(PHS_REQUESTSTATUSMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* SERIAL_IO2LCU_MESSAGE (PHS_SERIALIO2LCUMESSAGE) */
WRAPPER_API PHS_SERIALIO2LCUMESSAGE* Wrapper_Get_SERIAL_IO2LCU_MESSAGE(void);
WRAPPER_API AdiInt SERIAL_IO2LCU_MESSAGE_ConvertToPhysical(PHS_SERIALIO2LCUMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void SERIAL_IO2LCU_MESSAGE_ConvertToInterface(PHS_SERIALIO2LCUMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* SERIAL_LCU2IO_MESSAGE (PHS_SERIALLCU2IOMESSAGE) */
WRAPPER_API PHS_SERIALLCU2IOMESSAGE* Wrapper_Get_SERIAL_LCU2IO_MESSAGE(void);
WRAPPER_API AdiInt SERIAL_LCU2IO_MESSAGE_ConvertToPhysical(PHS_SERIALLCU2IOMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void SERIAL_LCU2IO_MESSAGE_ConvertToInterface(PHS_SERIALLCU2IOMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* SET_DISCRETES_MESSAGE (PHS_SETDISCRETESMESSAGE) */
WRAPPER_API PHS_SETDISCRETESMESSAGE* Wrapper_Get_SET_DISCRETES_MESSAGE(void);
WRAPPER_API AdiInt SET_DISCRETES_MESSAGE_ConvertToPhysical(PHS_SETDISCRETESMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void SET_DISCRETES_MESSAGE_ConvertToInterface(PHS_SETDISCRETESMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* SET_SYSTEM_STATE_MESSAGE (PHS_SETSYSTEMSTATEMESSAGE) */
WRAPPER_API PHS_SETSYSTEMSTATEMESSAGE* Wrapper_Get_SET_SYSTEM_STATE_MESSAGE(void);
WRAPPER_API AdiInt SET_SYSTEM_STATE_MESSAGE_ConvertToPhysical(PHS_SETSYSTEMSTATEMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void SET_SYSTEM_STATE_MESSAGE_ConvertToInterface(PHS_SETSYSTEMSTATEMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* START_INTERFACE_MESSAGE (PHS_STARTINTERFACEMESSAGE) */
WRAPPER_API PHS_STARTINTERFACEMESSAGE* Wrapper_Get_START_INTERFACE_MESSAGE(void);
WRAPPER_API AdiInt START_INTERFACE_MESSAGE_ConvertToPhysical(PHS_STARTINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void START_INTERFACE_MESSAGE_ConvertToInterface(PHS_STARTINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* STATUS_MESSAGE (PHS_STATUSMESSAGE) */
WRAPPER_API PHS_STATUSMESSAGE* Wrapper_Get_STATUS_MESSAGE(void);
WRAPPER_API AdiInt STATUS_MESSAGE_ConvertToPhysical(PHS_STATUSMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void STATUS_MESSAGE_ConvertToInterface(PHS_STATUSMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* STOP_INTERFACE_MESSAGE (PHS_STOPINTERFACEMESSAGE) */
WRAPPER_API PHS_STOPINTERFACEMESSAGE* Wrapper_Get_STOP_INTERFACE_MESSAGE(void);
WRAPPER_API AdiInt STOP_INTERFACE_MESSAGE_ConvertToPhysical(PHS_STOPINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void STOP_INTERFACE_MESSAGE_ConvertToInterface(PHS_STOPINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr);

/* TL_ONLY_MESSAGE_IO2LCU (PHS_TLONLYMESSAGEIO2LCU) */
WRAPPER_API PHS_TLONLYMESSAGEIO2LCU* Wrapper_Get_TL_ONLY_MESSAGE_IO2LCU(void);
WRAPPER_API AdiInt TL_ONLY_MESSAGE_IO2LCU_ConvertToPhysical(PHS_TLONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void TL_ONLY_MESSAGE_IO2LCU_ConvertToInterface(PHS_TLONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr);

/* TL_ONLY_MESSAGE_LCU2IO (PHS_TLONLYMESSAGELCU2IO) */
WRAPPER_API PHS_TLONLYMESSAGELCU2IO* Wrapper_Get_TL_ONLY_MESSAGE_LCU2IO(void);
WRAPPER_API AdiInt TL_ONLY_MESSAGE_LCU2IO_ConvertToPhysical(PHS_TLONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr);
WRAPPER_API void TL_ONLY_MESSAGE_LCU2IO_ConvertToInterface(PHS_TLONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr);

#ifdef __cplusplus
}
#endif

#endif /* WRAPPER_FROM_C_TO_SHARP_H */