InterfaceWrapper/Messages/WrapperFromCToSharp/WrapperInterop.cs

// Auto-generated by InterfaceWrapper. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace WrapperFromCToSharp
{
    /// <summary>
    /// P/Invoke bindings for the native WrapperFromCToSharp.dll.
    /// </summary>
    public static class WrapperInterop
    {
        private const string Dll = "WrapperFromCToSharp.dll";

        /// <summary>Numeric message identifiers discovered in the bus dispatcher.</summary>
        public enum MessageId
        {
            SET_DISCRETES_MESSAGE = 1,
            SERIAL_LCU2IO_MESSAGE = 2,
            SET_SYSTEM_STATE_MESSAGE = 3,
            START_INTERFACE_MESSAGE = 5,
            STOP_INTERFACE_MESSAGE = 6,
            KEEP_ALIVE_MESSAGE = 7,
            REQUEST_STATUS_MESSAGE = 101,
            STATUS_MESSAGE = 102,
            SERIAL_IO2LCU_MESSAGE = 103,
            LOG_DATA_MESSAGE = 104,
            NONCE_MESSAGE = 200,
            HDR_ONLY_MESSAGE_IO2LCU = 1001,
            HDR_ONLY_MESSAGE_LCU2IO = 1002,
            TL_ONLY_MESSAGE_IO2LCU = 1003,
            TL_ONLY_MESSAGE_LCU2IO = 1004,
        }

        // Marshalling map for the original C types:
        //   AdiInt / AdiInt32 -> int, AdiUInt8* buffer -> byte[], PHS_* structure pointer -> IntPtr.

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Wrapper_ConvertToPhysical(int msgId, byte[] intfPtr);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Wrapper_ConvertToInterface(int msgId, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_HDRONLYMESSAGEIO2LCU physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_HDR_ONLY_MESSAGE_IO2LCU();

        /// <summary>PHS_HDRONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int HDR_ONLY_MESSAGE_IO2LCU_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_HDRONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void HDR_ONLY_MESSAGE_IO2LCU_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_HDRONLYMESSAGELCU2IO physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_HDR_ONLY_MESSAGE_LCU2IO();

        /// <summary>PHS_HDRONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int HDR_ONLY_MESSAGE_LCU2IO_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_HDRONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void HDR_ONLY_MESSAGE_LCU2IO_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_KEEPALIVEMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_KEEP_ALIVE_MESSAGE();

        /// <summary>PHS_KEEPALIVEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int KEEP_ALIVE_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_KEEPALIVEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void KEEP_ALIVE_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_LOGDATAMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_LOG_DATA_MESSAGE();

        /// <summary>PHS_LOGDATAMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int LOG_DATA_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_LOGDATAMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LOG_DATA_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_NONCEMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_NONCE_MESSAGE();

        /// <summary>PHS_NONCEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int NONCE_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_NONCEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void NONCE_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_REQUESTSTATUSMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_REQUEST_STATUS_MESSAGE();

        /// <summary>PHS_REQUESTSTATUSMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int REQUEST_STATUS_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_REQUESTSTATUSMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void REQUEST_STATUS_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_SERIALIO2LCUMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_SERIAL_IO2LCU_MESSAGE();

        /// <summary>PHS_SERIALIO2LCUMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SERIAL_IO2LCU_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_SERIALIO2LCUMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void SERIAL_IO2LCU_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_SERIALLCU2IOMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_SERIAL_LCU2IO_MESSAGE();

        /// <summary>PHS_SERIALLCU2IOMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SERIAL_LCU2IO_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_SERIALLCU2IOMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void SERIAL_LCU2IO_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_SETDISCRETESMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_SET_DISCRETES_MESSAGE();

        /// <summary>PHS_SETDISCRETESMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SET_DISCRETES_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_SETDISCRETESMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void SET_DISCRETES_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_SETSYSTEMSTATEMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_SET_SYSTEM_STATE_MESSAGE();

        /// <summary>PHS_SETSYSTEMSTATEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SET_SYSTEM_STATE_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_SETSYSTEMSTATEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void SET_SYSTEM_STATE_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_STARTINTERFACEMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_START_INTERFACE_MESSAGE();

        /// <summary>PHS_STARTINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int START_INTERFACE_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_STARTINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void START_INTERFACE_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_STATUSMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_STATUS_MESSAGE();

        /// <summary>PHS_STATUSMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int STATUS_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_STATUSMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void STATUS_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_STOPINTERFACEMESSAGE physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_STOP_INTERFACE_MESSAGE();

        /// <summary>PHS_STOPINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int STOP_INTERFACE_MESSAGE_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_STOPINTERFACEMESSAGE* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void STOP_INTERFACE_MESSAGE_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_TLONLYMESSAGEIO2LCU physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_TL_ONLY_MESSAGE_IO2LCU();

        /// <summary>PHS_TLONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TL_ONLY_MESSAGE_IO2LCU_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_TLONLYMESSAGEIO2LCU* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TL_ONLY_MESSAGE_IO2LCU_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>Returns a pointer to the static PHS_TLONLYMESSAGELCU2IO physical structure.</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Wrapper_Get_TL_ONLY_MESSAGE_LCU2IO();

        /// <summary>PHS_TLONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TL_ONLY_MESSAGE_LCU2IO_ConvertToPhysical(IntPtr phsPtr, byte[] intfPtr);

        /// <summary>PHS_TLONLYMESSAGELCU2IO* phsPtr, AdiUInt8* intfPtr</summary>
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TL_ONLY_MESSAGE_LCU2IO_ConvertToInterface(IntPtr phsPtr, byte[] intfPtr);

    }
}
